@@ -1,7 +1,7 @@
 #  File src/library/base/R/svd.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2013 The R Core Team
+#  Copyright (C) 1995-2020 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -18,6 +18,8 @@
 
 svd <- function(x, nu = min(n,p), nv = min(n,p), LINPACK = FALSE)
 {
+    if (!missing(LINPACK))
+        stop("the LINPACK argument has been defunct since R 3.1.0")
     x <- as.matrix(x)
     if (any(!is.finite(x))) stop("infinite or missing values in 'x'")
     dx <- dim(x)
